Fix padding/spacing on mobile

--- a/scss/parts/_desktop.scss
+++ b/scss/parts/_desktop.scss
@@ -108,6 +108,7 @@
     
     .sidebar {
         width: 300px;
+        padding: 0;
     }
     
 }
