--- a/scss/parts/_structure.scss
+++ b/scss/parts/_structure.scss
@@ -130,6 +130,7 @@
     font-size: 11px;
     font-size: 1.1rem;
     line-height: 1.2;
+    padding: 0 10px;
     
     .widget {
         border: 1px solid $blue-mid;
